force-app/main/default/objects/Contact/fields/Hand_Raiser_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Hand_Raiser_Campaign_Id__c</fullName>
    <description
  >Transient campaign id (18-char) for hand-raiser MQL creation. Set before Set_to_MQL__c and cleared by trigger processing.</description>
    <label>Hand Raiser Campaign Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>