force-app/main/default/objects/Contact/fields/Hand_Raiser_Lead_Detail_1__c.field-meta.xml
<CustomField>
    <fullName>Hand_Raiser_Lead_Detail_1__c</fullName>
    <description
  >Transient lead detail 1 (v1) for hand-raiser MQL creation. Set before Set_to_MQL__c and cleared by trigger processing.</description>
    <label>Hand Raiser Lead Detail 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>