force-app/main/default/objects/Contact/fields/Hand_Raiser_Opp_Is_New__c.field-meta.xml
<CustomField>
    <fullName>Hand_Raiser_Opp_Is_New__c</fullName>
    <description
  >Set to true by the Events Portal (Route A) when it created a brand-new Opportunity for this hand raiser. When true, the MQL trigger creates the MQL as Converted with Conversion_Type__c = "Created Opportunity". When false or null (Route B), the MQL is created as New for sales review. Cleared by the trigger after processing.</description>
    <defaultValue>false</defaultValue>
    <label>Hand Raiser Opp Is New</label>
    <type>Checkbox</type>
</CustomField>