force-app/main/default/objects/Contact/fields/Hand_Raiser_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Hand_Raiser_Opportunity_Id__c</fullName>
    <description
  >Salesforce Opportunity Id (18-char) set by the Events Portal when a contact raises their hand at an event. When present, the MQL trigger creates an Events Portal MQL linked to this Opportunity and then clears this field.</description>
    <label>Hand Raiser Opportunity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>