force-app/main/default/objects/Contact/fields/Hand_Raiser_Payload_Version__c.field-meta.xml
<CustomField>
    <fullName>Hand_Raiser_Payload_Version__c</fullName>
    <description
  >Transient payload contract version for hand-raiser MQL enrichment. Set before Set_to_MQL__c and cleared by trigger processing.</description>
    <label>Hand Raiser Payload Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>