force-app/main/default/objects/Contact/fields/Hand_Raiser_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Hand_Raiser_Product_Id__c</fullName>
    <description
  >Salesforce Product Id (18-char) set by the Events Portal before flipping Set_to_MQL__c for an explicit hand raiser. The MQL trigger copies this value onto MQL__c.Product__c and then clears the field after processing.</description>
    <label>Hand Raiser Product Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>