force-app/main/default/objects/Contact/fields/Hand_Raiser_Source__c.field-meta.xml
<CustomField>
    <fullName>Hand_Raiser_Source__c</fullName>
    <description
  >Optional transient source marker for explicit hand-raiser handoffs. Upstream systems set this before flipping Set_to_MQL__c so Salesforce can route non-threshold form submits through the hand-raiser path even when no Opportunity exists yet. Cleared by the trigger after processing.</description>
    <label>Hand Raiser Source</label>
    <length>40</length>
    <type>Text</type>
</CustomField>