force-app/main/default/objects/Contact/fields/Hand_Raiser_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Hand_Raiser_Transaction_Id__c</fullName>
    <description
  >Submission transaction Id supplied by an external hand-raiser source. The Contact-to-MQL trigger copies it to MQL.Transaction_Id__c and then clears this transit field.</description>
    <inlineHelpText
  >Transaction Id for the external form submission that triggered the MQL.</inlineHelpText>
    <label>Hand Raiser Transaction Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>